fix updates for safari on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,9 @@ h4.card-title {
   position: relative;
   top: 50%;
   transform: translateY(-50%); }
+  @media screen and (min-width: 641px) {
+    .iowa-girls-code-camp-section {
+      -webkit-transform: translateY(25%); } }
 
 .faq-icon {
   font-size: 200%; }
@@ -89,7 +92,8 @@ h4.card-title {
   width: 100%; }
 
 .parallax-container {
-  display: inline-flex; }
+  display: inline-flex;
+  display: -webkit-inline-flex; }
 
 .row {
   text-align: center; }
